DO11_AdvK8s.ID_1220170-1/src/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - app.myapp-nieshays.local
    secretName: wildcard-tls-secret
  rules:
  - host: app.myapp-nieshays.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway-service
            port:
              number: 8087
